#4 Create terms page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/TermsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/TermsPage.utf8.properties
@@ -1,7 +1,61 @@
 title=Terms and Conditions
 
 info.text.heading=The following terms and conditions apply for the use of Eazy accounting
-info.text=
+info.text=<h4>Acceptance of Agreement </h4> \
+          \u00A0\u00A0\u00A0\u00A0The terms of use of Eazy Accounting (hereafter referred to "Terms" ) are accepted by ticking \
+          \u00A0\u00A0\u00A0\u00A0"I have read and agree to the terms " during the account creation \
+          \u00A0\u00A0\u00A0\u00A0and is applicable between Eazy IT, company registration number 34235422 , (hereafter referred to as "Eazy Accounting") \
+          \u00A0\u00A0\u00A0\u00A0and the client accepting the Terms, (hereafter referred to as "Customer"). \
+          \u00A0\u00A0\u00A0\u00A0\
+          \u00A0\u00A0\u00A0\u00A0<h4>Right of Use</h4> \
+          \u00A0\u00A0\u00A0\u00A0The subscription allows for the use of all Eazy accounting functions (hereafter referred to as "Program"). </br></br> \
+          \u00A0\u00A0\u00A0\u00A0In the Program multiple legal entities can be created. \
+          \u00A0\u00A0\u00A0\u00A0Use of the subscription applies to all legal entities created in the Program , and the Program should not be used by or for data processing for others. \
+          \u00A0\u00A0\u00A0\u00A0\
+          \u00A0\u00A0\u00A0\u00A0<h4>Invoices and Payment</h4> \
+                Subscription starts upon creation of account and runs for a period of 3 months at a time. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0First payment period runs from account creation date to the end of a calendar quarter. After which the service is invoiced quarterly in advance. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Within the first 30 days of account creation account cancellation is free. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0\
+          \u00A0\u00A0\u00A0\u00A0Payment terms are 8 days net from date of invoice. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0If the invoice is not payed within deadline, the first reminder is sent without charge seven days after the due date. If the invoice still not payed \
+          \u00A0\u00A0\u00A0\u00A0second reminder is sent 7 days after the first reminder , with the fee of \u20AC 30.00. \
+          \u00A0\u00A0\u00A0\u00A0If payment is still not received within 7 days after the second reminder, access to the Program is blocked. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Login to the application opens again after receiving of payment, unless Eazy Accounting has terminated the agreement. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0\
+          \u00A0\u00A0\u00A0\u00A0The Customer agrees that invoices and reminders are sent by e-mail to the Customer e-mail address. \
+          \u00A0\u00A0\u00A0\u00A0<h4>Unsubscribe</h4> \
+          \u00A0\u00A0\u00A0\u00A0The customer can in the Program under Settings> Base data> unsubscribe a the end of a calendar quarter.</br></br>\
+          \u00A0\u00A0\u00A0\u00A0The subscription can not be terminated for a begun quarter period. If the subscription is not canceled it is extended by a further 3 months. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0\
+          \u00A0\u00A0\u00A0\u00A0If the Client uses the Program in violation of the agreement, including terms and conditions, or otherwise as may be considered as unlawful or disruptive to the operation of Eazy Accounting, Eazy Accounting entitled to terminate the agreement without notice. \
+          \u00A0\u00A0\u00A0\u00A0<h4>Data</h4> \
+          \u00A0\u00A0\u00A0\u00A0The customer retains ownership and can freely use the data entered in the program. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Upon termination of the subscription, the Customer is free to export all data via the Program's export function before termination of subscription. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0\
+          \u00A0\u00A0\u00A0\u00A0Customer data is deleted at the earliest 90 days after end of subscription, Eazy Accounting has no obligation to retain Customer data after this time. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0\
+          \u00A0\u00A0\u00A0\u00A0Ownership of data is transfered to Eazy Accounting upon failing to payment of invoices. \
+          \u00A0\u00A0\u00A0\u00A0<h4>Operation</h4> \
+          \u00A0\u00A0\u00A0\u00A0Eazy Accounting strive for the highest possible uptime, but is not responsible for disruptions caused by factors outside of Eazy Accounting control. </br>\
+          \u00A0\u00A0\u00A0\u00A0Hereby but not limited to, power failure, failure of modem equipment, ADSL connections, telecommunications connections. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0In order to develop the best possible accounting program , it is sometimes necessary periodically to replace technical equipment and to carry out software updates etc. \
+          \u00A0\u00A0\u00A0\u00A0In this context, it may be necessary to temporarily suspend access to the Program. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Should it become necessary to suspend access to the Program, this will be announced beforehand. \
+          \u00A0\u00A0\u00A0\u00A0<h4> Changes in our terms and conditions </ h4> \
+          \u00A0\u00A0\u00A0\u00A0Changes in the conditions will emailed to the by Customer declared mail. \
+          \u00A0\u00A0\u00A0\u00A0<h4>Our responsibility</h4> \
+          \u00A0\u00A0\u00A0\u00A0Eazy Accounting is with the limitations described below, liable under Danish law for loss. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Eazy Accounting cannot be held liable for losses incurred as a result of simple negligence. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Eazy Accounting is not responsible for loss, consequential or other indirect losses, and liability is limited in amount to the Customer's payment for 12 months before the wrongful loss resulting action, but in all cases a maximum of \u20AC 1.000. \
+          \u00A0\u00A0\u00A0\u00A0<h4>Security</h4> \
+          \u00A0\u00A0\u00A0\u00A0Eazy Accounting treats only Customer data according to the Customers instruction and thus does not for own unrelated purposes. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Eazy Accounting preserves the confidentiality of all information Eazy Accounting handles on behalf of the customer, and is not entitled to disclose such information to third parties unless it is made after acceptance by the customer or as a result of a court order. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0Eazy Accounting has implemented the necessary security measures to protect data against accidental or unlawful destruction, loss or alteration and against the unauthorized disclosure, misuse or otherwise processed in breach of the Danish Act on Processing of Personal Data. </br></br>\
+          \u00A0\u00A0\u00A0\u00A0<h4>Disputes</h4> \
+          \u00A0\u00A0\u00A0\u00A0Any disputes that may arise in connection with the use of Eazy accounting or in connection with the interpretation of the stated terms shall be governed by Danish law and by the Danish courts. </br></br>   \
+          \u00A0\u00A0\u00A0\u00A0If there are any questions regarding these terms, please contact us via the details below. \
+          \u00A0\u00A0\u00A0\u00A0<a href="mailto:kontakt@eazyregnskab.dk?Subject=Vilk\u00E5r" target="_top"> kontakt@eazyregnskab.dk </ a> \
 
 meta.keywords=terms conditions
 meta.description=Eazy accounting - Terms and conditions
