#39 Is it possible to change account types when in use?

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -400,10 +400,7 @@ ChartOfAccountsPage.datatable.export-file-name=Finance accounts
 
 ChartOfAccountsPage.report.title=Chart of accounts for: ${name}
 
-ChartOfAccountsPage.columns.width=150,110,105,100,80
-
-ChartOfAccountsPage.page.size=595,842
-
+cannot.be.changed.in.use=Account number and type cannot be changed, since account is in use.
 #DailyLedgerPage-----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Daily ledgers
 
