--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -402,7 +402,7 @@ ChartOfAccountsPage.sum.to=Sum til
 ChartOfAccountsPage.sumTo=Sum til
 
 ChartOfAccountsPage.finance.account.was.deleted=Finanskontoen blev slettet
-ChartOfAccountsPage.finance.account.is.in.use=Finanskontoen er i brug og kan ikke slettes.
+ChartOfAccountsPage.finance.account.is.in.use=Finanskontoen er i brug og kan derfor ikke slettes.
 ChartOfAccountsPage.changes.has.been.saved=\u00C6ndringerne er blevet gemt
 ChartOfAccountsPage.finance.account.was.never.saved=Finanskontoen var ikke gemt
 ChartOfAccountsPage.number.all.ready.exists=Kontonummer allerede er i brug
@@ -410,11 +410,7 @@ ChartOfAccountsPage.number.to.long=Kontonummer er for langt
 
 ChartOfAccountsPage.datatable.export-file-name=Finanskonti
 
-ChartOfAccountsPage.report.title=Kontoplan for: ${name}
-
-ChartOfAccountsPage.columns.width=150,110,105,100,80
-
-ChartOfAccountsPage.page.size=595,842
+cannot.be.changed.in.use=Kontonummer og type kan ikke \u00E6ndres, da kontoen er i brug
 
 #DailyLedgerPage -----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Kasseklader
