#77 Run Findbugs analysis to check for bugs

--- a/mainwar/src/main/jasperreports/BalancePage.properties
+++ b/mainwar/src/main/jasperreports/BalancePage.properties
@@ -1,9 +1,7 @@
 report.title=Balance for {0}
 report.accounts=Accounts: {0} - {1}
-report.dates={0} - {1} \
-  ${2}
-report.dates.compare={0} - {1} \
-  ${2}
+report.dates={0} - {1}
+report.dates.compare={0} - {1}\n${2}
 account.number=Number
 account.name=Name
 sum=Balance
