#81 Export base date for finance accounts

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -226,6 +226,10 @@ cannot.be.changed.in.use=Account number and type cannot be changed, since accoun
 ChartOfAccountsPage.confirm.save=
 ChartOfAccountsPage.confirm.new=
 ChartOfAccountsPage.confirm.delete=Are you sure you want to delete the account?
+
+ChartOfAccountsPage.jasper.pdf=Finance accounts export.pdf
+ChartOfAccountsPage.jasper.xls=Finance accounts export.xls
+
 #DailyLedgerPage-----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Daily ledgers
 
