--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -337,6 +337,7 @@
                 <includes>
                     <include>**/*.properties</include>
                     <include>**/*.jrxml</include>
+                    <include>**/*.jrtx</include>
                     <include>**/*.jasper</include>
                 </includes>
             </resource>
