--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -231,6 +231,9 @@ ChartOfAccountsPage.confirm.save=
 ChartOfAccountsPage.confirm.new=
 ChartOfAccountsPage.confirm.delete=Er du sikker p\u00E5 du vil slette kontoen?
 
+ChartOfAccountsPage.jasper.pdf=Finanskonto export.pdf
+ChartOfAccountsPage.jasper.xls=Finanskonto export.xls
+
 #DailyLedgerPage -----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Kasseklader
 
