#61 Export daily ledger settings

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -253,6 +253,9 @@ DailyLedgerPage.confirm.save=
 DailyLedgerPage.confirm.new=
 DailyLedgerPage.confirm.delete=Are you sure you want to delete the daily ledger?
 
+DailyLedgerPage.jasper.pdf=Daily ledger export.pdf
+DailyLedgerPage.jasper.xls=Daily ledger export.xls
+
 #FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
 FiscalYearPage.datatable.export-file-name=Fiscal years
 
