--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -257,6 +257,9 @@ DailyLedgerPage.confirm.save=
 DailyLedgerPage.confirm.new=
 DailyLedgerPage.confirm.delete=Er du sikker p\u00E5 du vil slette kassekladen?
 
+DailyLedgerPage.jasper.pdf=Kasseklade export.pdf
+DailyLedgerPage.jasper.xls=Kasseklade export.xls
+
 #FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
 FiscalYearPage.datatable.export-file-name=Regnskabs\u00E5r
 
