#59 Export vat types

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -286,6 +286,9 @@ FiscalYearPage.confirm.save=Are you sure you want to create a new fiscal year
 FiscalYearPage.confirm.new=
 FiscalYearPage.confirm.delete=Are you sure you want to delete the fiscal year?
 
+FiscalYearPage.jasper.pdf=Fiscal year export.pdf
+FiscalYearPage.jasper.xls=Fiscal year export.xls
+
 
 #VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Vat types
@@ -310,6 +313,9 @@ VatTypesPage.name.to.long=Name is to long
 VatTypesPage.confirm.save=
 VatTypesPage.confirm.new=
 VatTypesPage.confirm.delete=Are you sure you want to delete the vat type?
+
+VatTypesPage.jasper.pdf=Vat types export.pdf
+VatTypesPage.jasper.xls=Vat types export.xls
 
 #BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Daily Ledger
