--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -290,6 +290,9 @@ FiscalYearPage.confirm.save=Er du sikker p\u00E5 du vil oprette regnskabs\u00E5r
 FiscalYearPage.confirm.new=
 FiscalYearPage.confirm.delete=Er du sikker p\u00E5 du vil slette regnskabs\u00E5ret?
 
+FiscalYearPage.jasper.pdf=Regnskabs\u00E5r export.pdf
+FiscalYearPage.jasper.xls=Regnskabs\u00E5r export.xls
+
 #VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Momstyper
 
@@ -313,6 +316,9 @@ VatTypesPage.name.to.long=Navnet er for langt
 VatTypesPage.confirm.save=
 VatTypesPage.confirm.new=
 VatTypesPage.confirm.delete=Er du sikker p\u00E5 du vil slette momstypen?
+
+VatTypesPage.jasper.pdf=Momsops\u00E6tning export.pdf
+VatTypesPage.jasper.xls=Momsops\u00E6tning export.xls
 
 #BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Kasseklade
