--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -362,6 +362,9 @@ BookkeepingPage.confirm.save=
 BookkeepingPage.confirm.new=
 BookkeepingPage.confirm.delete=
 
+BookkeepingPage.jasper.pdf=Daily ledger.pdf
+BookkeepingPage.jasper.xls=Daily ledger.xls
+
 #BaseReportForm ------------------------------------------------------------------------------------------------------------------
 
 dateFrom=From date
