--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -365,6 +365,9 @@ BookkeepingPage.confirm.save=
 BookkeepingPage.confirm.new=
 BookkeepingPage.confirm.delete=Er du sikker p\u00E5 du vil slette posteringen?
 
+BookkeepingPage.jasper.pdf=Kasseklade.pdf
+BookkeepingPage.jasper.xls=Kasseklade.xls
+
 #BaseReportForm --------------------------------------------------------------------------------------------------------------------
 
 dateFrom=Fra dato
