--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -20,6 +20,8 @@ button.yes=Yes
 button.no=No
 button.pdf=PDF
 button.xls=XLS
+button.import=Import
+button.import.finance.accounts=Importer kontoplan
 
 modal.title.confirm=Confirm
 
