--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -20,8 +20,19 @@ button.yes=Ja
 button.no=Nej
 button.pdf=PDF
 button.xls=XLS
+button.import=Importer
+button.download.example=Download eksempel
+button.choose.file=V\u00E6lg fil
+button.change.file=Skift
+button.remove=Fjern
+button.upload=Upload
+button.next=N\u00E6ste
+button.previous=Forrige
+button.finish=Afslut
 
 modal.title.confirm=Bekr\u00E6ft
+
+
 
 popup.postings=Posteringer
 
@@ -233,6 +244,18 @@ ChartOfAccountsPage.confirm.delete=Er du sikker p\u00E5 du vil slette kontoen?
 
 ChartOfAccountsPage.jasper.pdf=Finanskonto export.pdf
 ChartOfAccountsPage.jasper.xls=Finanskonto export.xls
+
+ChartOfAccountsPage.import.finance.accounts=Importer finanskonti
+ChartOfAccountsPage.how.to.import.finance.accounts=\
+  For at importere finanskonti skal du lave en excel (xls) fil som v\u00E6re opbygget p\u00E5 en bestemt m\u00E5de.\n\n  \
+  For hver r\u00E6kke skal du som minimum skal du angive et kontonummer, kontonavn og kontotype for hver konto. \n\n  \
+  Derudover kan du skrive navnet p\u00E5 en eksisterende momstype som du har lavet i forvejen. \n\n  \
+  Hvis momstypen du har skrevet ikke findes, f\u00E5r du muligheden for at lave en ny momskonto. \n\n  \
+  Tryk p\u00E5 knappen nedenfor for at downloade et eksempel.\n\n
+ChartOfAccountsPage.wizard.introduction=Introduktion
+ChartOfAccountsPage.wizard.fileupload=Upload din kontoplan
+ChartOfAccountsPage.wizard.adjust=Tilret din kontoplan
+ChartOfAccountsPage.wizard.approve=Godkend din kontoplan
 
 #DailyLedgerPage -----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Kasseklader
